tests/fixtures/cilium/cluster-network-policy.yaml
apiVersion: policy.networking.k8s.io/v1alpha2
kind: ClusterNetworkPolicy
metadata:
  name: echo-ingress-from-client-tiered-wildcard-pass-l7
spec:
  tier: Admin
  priority: 0
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cilium-test-1
      podSelector:
        matchLabels:
          kind: echo
  ingress:
    - action: Accept
      from:
        - pods:
            podSelector:
              matchExpressions:
                - key: reserved:host
                  operator: Exists
    - action: Accept
      from:
        - pods:
            podSelector: {}
      protocols:
        - udp:
            destinationPort:
              number: 53
        - tcp:
            destinationPort:
              number: 53
    - action: Pass
      from:
        - pods:
            namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: cilium-test-1
            podSelector:
              matchLabels:
                name: client
              matchExpressions:
                - key: io.cilium.k8s.policy.cluster
                  operator: Exists
    - action: Deny
      from:
        - namespaces: {}
